Header font color, and setting the column headers to have correct line height and letter spacing

--- a/src/components/Grid/Column.module.scss
+++ b/src/components/Grid/Column.module.scss
@@ -8,7 +8,9 @@
 .columnheader {
   text-transform: uppercase;
   font-size: 11px;
+  line-height: 16px;
   font-weight: 500;
+  letter-spacing: 0.1em;
 }
 
 .column > a,
